correções no exemplo

--- a/src/forms/seed_prestacao_contas/index.html
+++ b/src/forms/seed_prestacao_contas/index.html
@@ -1,4 +1,4 @@
-<html ng-app="AdfApp">
+<html ng-app="SeedApp">
 
 <head>
 	<!-- partial:../partials/head.html -->
@@ -6,7 +6,7 @@
 	<title>Prestação de Contas</title>
 </head>
 
-<body ng-controller="AdfController as vm">
+<body ng-controller="SeedController as vm">
 	<div class="fluig-style-guide ng-cloak">
 		<div class="container">
 			<div fluig-header class="hidden-xs" logo="/seed_lib/images/logo.png"></div>
